galaxy 0001 bo update api url

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>BMW</title>
+        <title>Galaxy0001</title>
     </head>
 
     <body>
